# cycle

./: .gitignore  .rustfmt.toml  CITATION.cff  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
benches/: sym.rs
crates/cycle-num/: Cargo.toml
crates/cycle-proof/: Cargo.toml
cycle-eval/: Cargo.toml
cycle-num/: Cargo.toml
cycle-play/: Cargo.toml
cycle-proof/: Cargo.toml
doc/: main.tex
src/: lib.rs
src/base/: alg.rs  cal.rs  fun.rs  manipulation.rs  mod.rs  rel.rs  sq.rs
src/base/algebra/: mod.rs  num_integer.rs  num_natural.rs  num_rational.rs  poly.rs  repr.rs
src/base/array/: data.rs  dims.rs  mod.rs
src/base/graph/: mod.rs
src/base/ring/: mod.rs  num_complex.rs  num_integer.rs  num_rational.rs  poly.rs  repr.rs
src/lang/: lexer.rs  mod.rs  parse.rs  prec_parser.rs  token.rs
src/num/: mod.rs
src/plot/: mod.rs
tests/: _lang.rs  alg.rs  base.rs
