[package]
name = "cycle"
version = "0.2.0"
description = "Mathematical modeling using symbolic trees"
authors = ["hrkz <hugo.frezat@gmail.com>"]

keywords = ["symbolic", "mathematics", "modeling", "analysis"]
edition = "2018"
license = "MIT"
readme = "README.md"

homepage = "https://cycle-research.org"
repository = "https://github.com/hrkz/cycle/"

[features]
default = ["cycle_lang", "cycle_plot"]

cycle_lang = []
cycle_plot = []

[dependencies]

[[bin]]
name = "omega"
path = "bin/omega.rs"
test = false
doc = false

[workspace]
members = [
  "cycle-eval",
  "cycle-num",
  "cycle-play",
]
