[package]
name = "cycle"
version = "0.4.0"
description = "modern and safe symbolic mathematics"
authors = ["hrkz <hugo.frezat@gmail.com>"]

keywords = ["symbolic", "mathematics", "modeling", "analysis"]
edition = "2021"
license = "MIT"
readme = "README.md"

homepage = "https://cycle-research.org"
repository = "https://github.com/hrkz/cycle/"

[features]
default = ["cycle_lang", "cycle_num", "cycle_plot"]

cycle_lang = []
cycle_num  = []
cycle_plot = []

[dependencies]

[[bin]]
name = "omega"
path = "bin/omega.rs"
test = false
